Changed files name and some minor changes in href

--- a/services.html
+++ b/services.html
@@ -131,9 +131,9 @@
 
     <!-- NAVBAR -->
     <nav class="navbar">
-        <a href="HomePage.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="services.html">Services</a>
-        <a href="index.html">Menu</a>
+        <a href="menu.html">Menu</a>
         <a href="#Contact">Contact</a>
     </nav>
 
