--- a/login-page.html
+++ b/login-page.html
@@ -143,7 +143,7 @@
             </form>
 
             <!-- Signup Form -->
-            <form action="HomePage.html" id="signup-form">
+            <form action="index.html" id="signup-form">
                 <input type="text" placeholder="Username" required>
                 <input type="email" placeholder="Email" required>
                 <input type="password" placeholder="Password" required>
