--- a/login-page.html
+++ b/login-page.html
@@ -136,7 +136,7 @@
             </div>
 
             <!-- Login Form -->
-            <form action="HomePage.html" id="login-form" >
+            <form action="index.html" id="login-form" >
                 <input type="text" placeholder="Username" required>
                 <input type="password" placeholder="Password" required>
                 <button type="submit" class="submit-btn">Login</button>
